# HiFiLES-solver

./: .gitignore  HiFiLES.pro  HiFiLES.pro.shared  Makefile  Makefile.am  Makefile.cluster  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure_run.sh  feature-Shock.pro  feature-Shock.pro.user.c17d9fd  input_naca_shock_visc  input_template  libtool  makefile.in
HiFiLES.xcodeproj/: project.pbxproj
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: hifiles_basics.tex
doc/AIAApaper/abstract/: .dropbox
doc/AIAApaper/aiaa_atlanta_2014/: abstract.tex  acknowledgements.tex  case_flatplate.tex  case_manufactured.tex  case_squarecylinder.tex  case_taylorgreen.tex  code_description.tex  governing_equations.tex  introduction.tex  main.tex  references.bib  summaryTable.tex  summaryTable_ele1_err2.tex  summaryTable_ele2_err2.tex  validation.tex
include/: Array.h  adaptive_quadrature_2D.h  array.h  bdy_inters.h  cubature_1d.h  cubature_hexa.h  cubature_quad.h  cubature_tet.h  cubature_tri.h  cuda_kernels.h  eles.h  eles_hexas.h  eles_pris.h  eles_quads.h  eles_tets.h  eles_tris.h  error.h  flux.h  funcs.h  geometry.h  global.h  input.h  int_inters.h  inters.h  linear_solvers_structure.hpp  linear_solvers_structure.inl  macros.h  matrix.h  matrix_structure.hpp  matrix_structure.inl  mesh.h  mpi_inters.h  output.h  parmetisbin.h  rename.h  simplex_min_method.h  solution.h  solver.h  source.h  util.h  (+2 more)
lib/: Makefile.am  Makefile.in
lib/parmetis-4.0.2/: BUILD.txt  CMakeLists.txt  Changelog  Install.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in
lib/parmetis-4.0.2/libparmetis/: diffutil.c  frename.c  serial.c  wave.c
lib/parmetis-4.0.2/metis/: Changelog  Makefile  Makefile.am  Makefile.in
lib/parmetis-4.0.2/metis/GKlib/: CMakeLists.txt  GKlib.h  Makefile  blas.c  csr.c  evaluate.c  gk_defs.h  gk_mkpqueue.h  gk_proto.h  gk_struct.h  io.c  itemsets.c  mcore.c  random.c
lib/parmetis-4.0.2/metis/GKlib/test/: fis.c  gksort.c
lib/parmetis-4.0.2/metis/libmetis/: coarsen.c  defs.h  kmetis.c  mcutil.c  mesh.c  meshpart.c  options.c  proto.h  rename.h  struct.h  timing.c
lib/parmetis-4.0.2/metis/programs/: cmdline_gpmetis.c  cmdline_mpmetis.c  cmdline_ndmetis.c  gpmetis.c  io.c  metis.c  ndmetis.c  struct.h
lib/parmetis-4.0.2/programs/: CMakeLists.txt  adaptgraph.c  io.c  mtest.c  otest.c  parmetis.c  parmetisbin.h  plotorder.pl  pometis.c  proto.h  ptest.c
lib/tecio-2008/: Makefile.am  Runmake  pltview  pltview.cpp  readme.txt  tecplot.phy
lib/tecio-2008/tecsrc/: ;  ALLOC.h  ARRLIST.h  AUXDATA.h  DATAIO.h  DATAIO4.h  DATASET.h  DATASET0.h  DATASHR.h  DATAUTIL.h  FACE.h  FILESTREAM.h  GEOM.h  GEOM2.h  GLOBAL.h  INPUT.h  MASTER.h  Q_MSG.h  Q_UNICODE.h  SET.h  STRLIST.h  STRUTIL.h  SYSTEM.h  TASSERT.h  TECXXX.h  TEXT.h  TranslatedString.cpp  TranslatedString.h  VERSION.h  alloc.cpp  arrlist.cpp  auxdata.cpp  dataio.cpp  dataio4.cpp  dataset.cpp  dataset0.cpp  datautil.cpp  filestream.cpp  geom2.cpp  q_msg.cpp  (+7 more)
m4/: metis.m4
makefiles/: makefile.OSX.in  makefile.OSX_MPI.in  makefile.aphrodite_CPU.in  makefile.cluster.in  makefile.enrico_GPU.in  makefile.enrico_MPI.in  makefile.enrico_serial.in  makefile.fpalacios_OSX_MPI.in  makefile.nikola_MPI.in
paper/abstract/: abstract.tex  body.tex  code_description.tex  code_description.tex.backup  contributions (Manuel López's conflicted copy 2013-11-13).tex  contributions.tex  contributions.tex.backup  govEqns.tex  governing_equations.tex  gpu.tex  hypernat.tex  intro.tex  introduction-v2.0.tex  introduction.tex  keyResults.tex  main.bbl  main.blg  main.dvi  main.out  main.tex  methods.tex  methods.tex.backup  nomenclature.tex  prelim.tex  premat.tex  purpose.tex  purpose.tex.backup  references.bib  references2.bib.backup  results.tex  shock.tex  validation.tex  validation2.tex  verification.tex  verification2.tex
paper/aiaa_atlanta_2014/: abstract.tex  acknowledgements.tex  aiaa-tc.cls  case_RANS_naca0012.tex  case_SD7003.tex  case_cylinder.tex  case_flatplate.tex  case_manufactured.tex  case_squarecylinder.tex  case_taylorgreen.tex  code_description.tex  conclusion.tex  governing_equations.tex  introduction.tex  main.tex  nomenclature.tex  references.bib  summaryTable_ele1_err1.tex  summaryTable_ele1_err2.tex  summaryTable_ele2_err1.tex  summaryTable_ele2_err2.tex  validation.tex  verification.tex
paper/aiaa_atlanta_2014/figures/: energy-t1050010-jet.eps  sensor-t1050010-spectral.eps
paper/aiaa_atlanta_2014/figures_RANS_naca0012/: NACA0012_Re6mil_alp0_momx.eps
src/: Array.cpp  HiFiLES.cpp  adaptive_quadrature_2D.cpp  bdy_inters.cpp  cubature_1d.cpp  cubature_hexa.cpp  cubature_quad.cpp  cubature_tet.cpp  cubature_tri.cpp  cuda_kernels.cu  eles.cpp  eles_hexas.cpp  eles_pris.cpp  eles_quads.cpp  eles_tets.cpp  eles_tris.cpp  flux.cpp  funcs.cpp  geometry.cpp  global.cpp  input.cpp  int_inters.cpp  inters.cpp  linear_solvers_structure.cpp  matrix.cpp  matrix_structure.cpp  mesh.cpp  mpi_inters.cpp  output.cpp  quanc8.cpp  solver.cpp  source.cpp  vector_structure.cpp
src/.deps/: ___bin_HiFiLES-HiFiLES.Po  ___bin_HiFiLES-bdy_inters.Po  ___bin_HiFiLES-cubature_1d.Po  ___bin_HiFiLES-cubature_hexa.Po  ___bin_HiFiLES-cubature_quad.Po  ___bin_HiFiLES-cubature_tet.Po  ___bin_HiFiLES-cubature_tri.Po  ___bin_HiFiLES-eles.Po  ___bin_HiFiLES-eles_hexas.Po  ___bin_HiFiLES-eles_pris.Po  ___bin_HiFiLES-eles_quads.Po  ___bin_HiFiLES-eles_tets.Po  ___bin_HiFiLES-eles_tris.Po  ___bin_HiFiLES-flux.Po  ___bin_HiFiLES-funcs.Po  ___bin_HiFiLES-geometry.Po  ___bin_HiFiLES-global.Po  ___bin_HiFiLES-input.Po  ___bin_HiFiLES-int_inters.Po  ___bin_HiFiLES-inters.Po  ___bin_HiFiLES-linear_solvers_structure.Po  ___bin_HiFiLES-matrix_structure.Po  ___bin_HiFiLES-mesh.Po  ___bin_HiFiLES-mpi_inters.Po  ___bin_HiFiLES-output.Po  ___bin_HiFiLES-solver.Po  ___bin_HiFiLES-vector_structure.Po
testcases/: parallel_regression.py  regression_tests.py  serial_regression.py
testcases/navier-stokes/: readme.txt
tools/: inputFileTools.py  machinefileTools.py  runManagementTools.py
(+36 files in other folders)
