#####################################################
# \file Makefile.am
# \brief Top-level AutoMake file for HiFiLES
# \author - Original code: SD++ developed by Patrice Castonguay, Antony Jameson,
#                          Peter Vincent, David Williams (alphabetical by surname).
#         - Current development: Aerospace Computing Laboratory (ACL)
#                                Aero/Astro Department. Stanford University.
# \version 0.1.0
# \date Modified on 3/14/14
#
# High Fidelity Large Eddy Simulation (HiFiLES) Code.
# Copyright (C) 2014 Aerospace Computing Laboratory (ACL).
#####################################################

ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

SUBDIRS = obj/
